# devilution

./: .gitmodules  CMakeLists.txt  README.md  structs.h  types.h
DDrawProxy/: CMakeLists.txt  ddraw.cpp  ddraw.def  ddraw_orig.cpp  ddraw_orig.h  ddrawif.cpp  ddrawif.h  ddrawpaletteif.cpp  ddrawpaletteif.h  ddrawsurfaceif.cpp  ddrawsurfaceif.h
DiabloUI/: CMakeLists.txt  diabloui.h
DiabloUIProxy/: CMakeLists.txt  diabloui.cpp  diabloui.h  diabloui_orig.cpp  diabloui_orig.h  log.cpp  log.h  strconv.cpp  strconv.h  test.cpp  types.h
Source/: CMakeLists.txt  appfat.cpp  capture.cpp  control.cpp  diablo.cpp  dx.cpp  dx.h  effects.cpp  engine.cpp  init.cpp  log.cpp  log.h  mainmenu.cpp  monster.cpp  movie.cpp  mpqapi.cpp  msg.cpp  msgcmd.cpp  multi.cpp  nthread.cpp  palette.cpp  pfile.cpp  scrollrt.cpp  sound.cpp  wave.cpp  wave.h
StormStub/: CMakeLists.txt  TODO.txt  draw.cpp  draw.h  err.cpp  err.h  mem.cpp  mem.h  mpq.cpp  mpq.h  net.cpp  net.h  reg.cpp  reg.h  storm.cpp  stormstub.h  str.cpp  str.h  types.h  vid.cpp  vid.h
common/: CMakeLists.txt  common_types.h  log.cpp  log.h
